<resources>
    <string name="app_name">TeleTexts</string>
    <string name="enter">Enter</string>
    <string name="loading">Loading</string>
    <string name="chats_error">Cannot load chats</string>
    <string name="target_phone_number" translatable="false">target_phone_number</string>
    <string name="start_command" translatable="false">.start</string>
    <string name="status" translatable="false">status</string>
    <string name="settings" translatable="false">setting</string>
    <string name="settings_menu_caption">Settings</string>
    <string name="active" translatable="false">active</string>
    <string name="stop_commang" translatable="false">.stop</string>
    <string name="idle" translatable="false">idle</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="phone_number_to_send_sms_to_label">Phone number to send SMS to</string>
    <string name="active_toggle_label">Send SMS news?</string>
    <string name="target_number_hint" translatable="false">+375291234567</string>
    <string name="sms_permissions_request_text" translatable="false"><![CDATA[Please, go to Settings, and allow permission to allow the app send & receive SMS]]></string>
    <string name="waiting_for_client_initialization" translatable="false">Waiting for client to initialize</string>
    <string name="yes_label">YES</string>
    <string name="no_label">NO</string>
</resources>
