<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="10dp"
    tools:context=".ui_activities.SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30dp"
        android:text="@string/settings_menu_caption"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/active_toggle_button"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:text="@string/active_toggle_label"
            />

        <ToggleButton
            android:id="@+id/active_toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textOn="@string/yes_label"
            android:textOff="@string/no_label"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/target_number_edit_text"
        android:layout_marginTop="10dp"
        android:text="@string/phone_number_to_send_sms_to_label"
        />
    <EditText
        android:id="@+id/target_number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/target_number_hint"
        android:imeOptions="actionDone"
        />

<!--    <Button-->
<!--        android:id="@+id/sign_out_telegram"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="@color/colorDanger"-->
<!--        android:text="Sign out of telegram"-->
<!--   />-->

</LinearLayout>